--- a/arith.qmd
+++ b/arith.qmd
@@ -5,7 +5,7 @@ lang: pt-BR
 ---
 
 
-## Operações aritméticas 
+## Operações aritméticas {#sec-ops-arit}
 
 :::{#task}
 As [operações](https://docs.gap-system.org/doc/ref/chap4_mj.html#X7B66C8707B5DE10A) mais comuns em GAP são `+` (adição), `-` (subtração), `*` (multiplicação), `/` (divisão), `mod`, (resto) `^` (exponenciação). Experimente com os seguintes exemplos.
@@ -33,7 +33,7 @@ gap> 1.0/3;
 
 Note a diferença entre trabalhar com valores exatos (como por exemplo `1/3`) e valores aproximados (por exemplo `1.0/3`).
 
-## Operações lógicas (booleanas)
+## Operações lógicas (booleanas) {#sec-bool}
 
 Para comparar valores, usamos a operação `=` cujo valor é um [valor lógico](https://docs.gap-system.org/doc/ref/chap20_mj.html#X787B4AB77A2F5E14) ou seja `true` ou `false`. As operações com valores lógicos são `not`, `and` e `or`. 
 ```matlab
